# shuup-logging

./: MANIFEST.in  README.md  setup.cfg
shuup_logging/: .gitignore  apps.py  settings.py  signal_handlers.py  views.py
shuup_logging.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
shuup_logging/admin/: __init__.py  notifications.py  products.py  shop_products.py  suppliers.py
shuup_logging_tests/: settings.py
